<resources>
    <string name="app_name">Wozart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">160586947836430</string>
    <string name="fb_login_protocol_scheme">fb160586947836430</string>
    <string name="title_activity_sharing">Share</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is enabled for your project, you have a properly configured google-services.json file and that your device has an internet connection.</string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="server_client_id">929748901585-1oqsgea13j23aq9h3oar7g6lgs2ke20f.apps.googleusercontent.com</string>
    <string name="Roboto_Bold">Roboto-Bold</string>
    <string name="Roboto_Medium">Roboto-Medium</string>
    <string name="Roboto_Light">Roboto-Light</string>
    <string name="Roboto_Regular">Roboto-Regular</string>
    <string name="Roboto_Thin">Roboto-Thin</string>
    <string name="Roboto_Italic">Roboto-Italic</string>
    <string name="open_sans">open-sans-regular</string>
    <string name="title_select_app_key">Select App Key</string>
    <string name="no_added_app_keys_rationale">Binding an app key to a model requires it to be added to a provisioned mesh node.
        Navigate back to the node configuration view add a new app key</string>
    <string name="title_manage_app_keys">Manage App Keys</string>
    <string name="hint_name">Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="verify_account">Please verify email by clicking the verification link sent to your account</string>
    <string name="verified">Your mail has been verified.\n Click ”Done” to process</string>
    <string name="txt_please_wait">Please Wait…</string>
    <string name="hint_email_id">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_cnf_password">Confirm password</string>
    <string name="hint_forgot_password">Forgot Password?</string>
    <string name="hint_login">Login</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>
    <string name="text_save">Save</string>
    <string name="text_or">Or</string>
    <string name="text_new_user">New user?</string>
    <string name="text_existing_user">Existing user?</string>
    <string name="text_signup_here">Sign up here</string>
    <string name="text_login_here">Login here</string>
    <string name="text_google_login">Login with Google</string>
    <string name="text_request_password">Request password</string>
    <string name="hint_email_message">The password email has been sent to your account please check and login </string>
    <string name="wozart_company_name">Wozart Technologies Pvt Ltd</string>
    <string name="wozart_address">Hyderabad</string>
    <string name="home_empty_text">Start building your\nconnected home by adding \nappliances and lights</string>
    <string name="title_home_details">New Home</string>
    <string name="title_edit_home">Edit Home</string>
    <string name="title_room_details">Rooms</string>
    <string name="title_add_room">Add Room</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_home">Add home</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_add_favourite">Add to Favourite</string>
    <string name="action_share_device">Share</string>
    <string name="title_aws_connect">Enable Remote Access</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_configure_load">Configure Loads</string>
    <string name="title_customization">Wozart Devices</string>
    <string name="title_edit_load">Configure Load</string>
    <string name="manage_loads">Manage Load</string>
    <string name="sense_range">Select sensor</string>
    <string name="set_motion_title">Sensor Automation</string>
    <string name="above">Above</string>
    <string name="below">Below</string>
    <string name="sense_title">A Sensor Detects Something</string>
    <string name="detect_motion">Motion Detected</string>
    <string name="any_time">Any time</string>
    <string name="stop_detecting_motion">No Motion Detected</string>
    <string name="diselect_motion">Please deselect the selected motion</string>
    <string name="temperature_grater">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="motion">Motion</string>
    <string name="light_intensity">Light Intensity</string>
    <string name="turn_off">Turn Off</string>
    <string name="night_time">At night</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_action_ok">OK</string>
    <string name="title_delete_scene">Delete Scene</string>
    <string name="title_delete_appliance">Delete Device</string>
    <string name="dialog_internet_error_msg">Please check your internet connection</string>
    <string name="dialog_internet_error_title">Network Error</string>
    <string name="txt_ok">OK</string>
    <string name="or">OR</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_accept">Accept</string>
    <string name="status_accept">Accepted</string>
    <string name="txt_reject">Reject</string>
    <string name="status_reject">Rejected</string>
    <string name="txt_no">NO</string>
    <string name="txt_yes">YES</string>
    <string name="txt_move">MOVE</string>
    <string name="text_logout_message">Are you sure you want to logout?</string>
    <string name="text_disable_aws_connect">Are you sure you want to proceed?</string>
    <string name="dialog_remove_device">Are you sure you want to remove?</string>
    <string name="dialog_remove_device_title">Remove</string>
    <string name="title_logout">Logout</string>
    <string name="dialog_message_add_contact">Do you want to share your home access with %s?</string>
    <string name="dialog_message_remove_contact">Are you sure you want to exclude this user from sharing?</string>
    <string name="aws_connect_dialog_message">Once enable remote access cannot be disabled. Are you sure you want to proceed?</string>
    <string name="dialog_share">Who would you like to invite?</string>
    <string name="invitation_share">Invitation sent to %s</string>
    <string name="failed_sharing">Sharing failed, try again!</string>
    <string name="guest_revoke">Are you sure? %s will no longer have access to %s</string>
    <string name="dialog_delete_appliance">Are you sure you want to delete this Device?</string>
    <string name="dialog_invoke">Are you sure you want to Revoke the Access?</string>
    <string name="dialog_invoke_master">Delete Home will delete the Master Access.</string>
    <string name="dialog_delete_default_home">Default home can not be deleted.</string>
    <string name="dialog_delete_room_name">Default room cannot be deleted.</string>
    <string name="dialog_delete_home">Deleting the home will remove all the connected devices.\nAre you sure you want to delete %s?</string>
    <string name="dialog_delete_room">Deleting the room will remove all the associated connected devices.\nAre you sure you want to delete %s?</string>
    <string name="dialog_accept_notification">Are you sure you want to accept?</string>
    <string name="dialog_reject_notification">Are you sure you want to reject?</string>
    <string name="delete_room"><u>Delete Room</u></string>
    <string name="edit_scene_delete">Manage Scene</string>
    <string name="edit_automation_title">Manage Automation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_wifi_settings">Wi-Fi Settings</string>
    <string name="empty_tag" />
    <string name="all_device">Ir Devices</string>
    <string name="wifi_settings_configure_url">http://192.168.10.1/</string>
    <string name="text_settings_info_1">Go to Wi-Fi settings and connect with</string>
    <string name="text_settings_info_2">Wozart Switch xxxxxx Android</string>
    <string name="text_zmote_config">zmoteXXXXXX</string>
    <string name="text_btn_wifi_settings">Wi-Fi Settings</string>
    <string name="text_info_guest_can_skip">Already paired with Wi-Fi?</string>
    <string name="text_skip">Skip ></string>
    <string name="text_my_home">Name your Home</string>
    <string name="name_device">Name your device</string>
    <string name="name_remote">Enter Remote Name</string>
    <string name="remote_name">* Remote Name</string>
    <string name="text_my_room">Room Name</string>
    <string name="share_text_invoke">Exit Home</string>
    <string name="share_text_invoke_master">Revoke Access</string>
    <string name="share_leave_home">Leave Home</string>
    <string name="text_custom_room">Custom Room</string>
    <string name="text_pick_wallpaper">Change wallpaper</string>
    <string name="text_rooms">Select Room Icon</string>
    <string name="text_scan_for_new">Scan for Wozart Devices</string>
    <string name="title_aura_list">Available Wozart Devices</string>
    <string name="text_btn_create_new">Create New</string>
    <string name="text_power_consumption">Power Consumption</string>
    <string name="dialog_title_email_required">Enter registered email-id</string>
    <string name="login">Login</string>
    <string name="login_text">Welcome to</string>
    <string name="login_text_2">Wozart</string>
    <string name="login_text_1">start building your</string>
    <string name="login_text_3">connected home</string>
    <string name="text_for_add">Share Wozart experience \n with your loved ones</string>
    <string name="text_for_tap">To invite , tap</string>
    <string name="text_for_tap_plus"> + </string>
    <string name="home_tab_text">Home</string>
    <string name="rooms_tab_text">Rooms</string>
    <string name="automation_tab_text">Automations</string>
    <string name="title_automation">Automations</string>
    <string name="title_room">Rooms</string>
    <string name="more_tab_text">Settings</string>
    <string name="app_close_toast_text">Press again to close Wozart</string>
    <string name="total_devices">Devices</string>
    <string name="device_present">Devices</string>
    <string name="devices_on">Devices on</string>
    <string name="devices_off">Devices off</string>
    <string name="fav_scenes">Scenes</string>
    <string name="remote_btn_fav">Favourites Remote Buttons</string>
    <string name="fav_devices">Favourites</string>
    <string name="text_next">Next</string>
    <string name="text_share">Share</string>
    <string name="text_title_create_automation">New Automation</string>
    <string name="text_automation_time">Time based automation</string>
    <string name="text_automation_geo">Location based automation</string>
    <string name="txt_details">Details</string>
    <string name="add_aura_switch_text">Add Wozart Switch</string>
    <string name="create_scenes_text">Add Scene</string>
    <string name="add_room">Add Room</string>
    <string name="invoke">Are you sure you want to Invoke</string>
    <string name="add_as_favourite">Add this button as favourite</string>
    <string name="learn_remote">Learn Remote or Add as Favourite</string>
    <string name="empty_remote_learn">Start learning button</string>
    <string name="learn">Learn</string>
    <string name="not_confirmed">Not Working</string>
</resources>