<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/dialog_margin"
    android:paddingRight="@dimen/dialog_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:background="@drawable/dialogue_drawable">
    <TextView
        android:id="@+id/tv_title"
        style="@style/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/uniform_extra_spacing"
        android:text="@string/dialog_title_email_required"
        />

    <RelativeLayout
        android:id="@+id/message_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/one_dp"
        android:paddingBottom="@dimen/one_dp"
        android:layout_below="@+id/tv_title">
        <TextView
            android:id="@+id/message"
            style="@style/TextViewSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_d_n"
            android:text="@string/invoke"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_rl"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@drawable/curved_rectangle_bg"
        android:elevation="@dimen/uniform_half_spacing"
        android:padding="@dimen/uniform_spacing"
        android:text="@string/txt_ok"
        android:textAllCaps="false"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_normal_size"
        app:backgroundTint="@color/white_smoke_d_n" />

    <Button
        android:id="@+id/btn_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_rl"
        android:layout_marginTop="@dimen/one_dp"
        android:background="@drawable/gradient_desin"
        android:elevation="@dimen/uniform_half_spacing"
        android:padding="@dimen/uniform_spacing"
        android:text="@string/txt_cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_normal_size"
        app:backgroundTint="@color/colorAccent" />


</RelativeLayout>
