<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen_d_n">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/tv_info_2"
            style="@style/TextViewAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_info_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/text_settings_info_2" />

        <TextView
            android:id="@+id/tv_info_1"
            style="@style/TextViewAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_settings_info_1" />

        <Button
            android:id="@+id/btnConfigureDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_info_2"
            android:layout_centerInParent="true"
            android:background="@drawable/gradient_desin"
            android:layout_marginTop="@dimen/button_margin_top"
            android:paddingBottom="@dimen/uniform_extra_spacing"
            android:paddingLeft="@dimen/button_side_padding"
            android:paddingRight="@dimen/button_side_padding"
            android:paddingTop="@dimen/uniform_extra_spacing"
            android:text="    Configure   "
            android:textColor="@color/white"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/tv_guest_can_skip"
            style="@style/TextViewSmall"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_info_guest_can_skip" />


        <TextView
            android:id="@+id/tvSkip"
            style="@style/TextViewAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_guest_can_skip"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="20dp"
            android:padding="@dimen/action_btn_padding"
            android:text= "@string/text_skip" />
    </RelativeLayout>
</RelativeLayout>
